# materials_chempy

./: .buildinfo  .gitignore  README.md  TODO.html  ]  articles_data_analysis.html  chromatography.html  cli.py  client.html  database_analysis.html  environment.yml  extra_material.html  genindex.html  imaging.html  index.html  introduction.html  main.py  mass_spectrometry.html  notebooks.html  objects.inv  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.py  spectrophotometry.html  tmp.js  tmp.py  utils.py
.github/workflows/: build.yml  documentation.yml  python-package-conda.yml
.jukit/: .jukit_info.json  cli_utils_outhist.json  tmp_outhist.json  utils_outhist.json
.spyproject/config/: unittest.ini
.spyproject/config/backups/: workspace.ini.bak
_sources/: TODO.rst.txt  database_analysis.rst.txt  extra_material.rst.txt  introduction.rst.txt  mass_spectrometry.rst.txt  notebooks.rst.txt  quickstart.rst.txt  spectrophotometry.rst.txt
chromatography/: requirements.txt  t.py  tests.py
database_analysis/: Untitled.ipynb  dban_functions.ipynb  dban_functions.py  main.py  requirements.txt
database_analysis/.ipynb_checkpoints/: dban_functions-checkpoint.ipynb
database_analysis/.jukit/: .jukit_info.json
dev/: AuNd_Chloroform_650.FS  aunuchcl2650_2.csv  cli.ipynb  compilation_olds.ipynb  fl_parsers_dev.ipynb  gc_functions.py  histogram.py  mass_plotting (1).ipynb  mass_plotting.ipynb  mass_plotting.py  springer.ipynb  springer.py  tmp.ipynb  tmp.py  tmp2.py  tmp_themes.py
dev/data/: aunu_fl.txt  aunuchcl2650_1.csv  pdagchcl2.csv  pybliometrics.cfg  uc.csv
dev/exms/: example_plot_an2py_a1.mzML_1.html  example_plot_anad2.mzML_1.html
dev/ms/: functions2.py  functions2.py.bak  parsing.py  tmp.py  utils.py
dev/nb/: flem_plot.ipynb  histogram.ipynb  matplotlib_styles.ipynb  references.ipynb
dev/py/: qt_initial_data_plot_analysis.py  references.py  references_2.py
dev/references/: anad2 (copy).mzML  anad2-Copy1.csv  tmp.md
docs/: Makefile  TODO.rst  articles_data_analysis.ipynb  chromatography.rst  client.rst  conf.py  database_analysis.rst  imaging.rst  index.rst  introduction.rst  problematic_doctests.py  pybliometrics.cfg  quickstart.rst  requirements.txt  spectrophotometry.rst  tmp.py
docs/pyplots/: .~lock.MOF_scopus.csv#  MOF_scopus.csv  bar_csv_springer_niobium.py  niobium_springer.csv  test_bar.py
docs/pyplots/.jukit/: .jukit_info.json  test_bar_outhist.json
docs/sphinxext/: plots.py
docs/static/: plots.py
docs/static/.jukit/: .jukit_info.json  plots_outhist.json
docs/tmp/: Upconversion_pubmed.csv  Upconversion_scopus.csv
example_data/: MOF_pubmed.csv
materials_chempy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
notebooks/: articles_data_analysis.ipynb  articles_data_analysis.py  ase_guide.ipynb  dban_functions.ipynb  distinctipy_usage.ipynb
pdfclassify/: Untitled.ipynb  classify_cat_functions.py  main.py
spectrophotometry/: functions.py  requirements.txt  spec_functions.ipynb
src/materials_chempy/: __init__.py  __main__.py  cli.py  cli_utils.py  conftest.py  logger.py  test_cli.py  test_utils.py  utils.py  var_handler.py
src/materials_chempy/mass_spectrometry/: functions.py.abk  ms_functions.py  requirements.txt  treat.py  utils.py
src/materials_chempy/plot/: utils.py  widget.py
src/materials_chempy/spectrophotometry/: handle_data.py  spec_functions.py  utils.py
