[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "materials_chempy"
version = "0.1.0"
description = "Terminal tools and utils on inorganic chemistry & materials science data handling."
readme = "README.md"
#readme = {file = "README.txt", content-type = "text/x-rst"}
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Eduardo Toledo Campos", email = "eduardotcampos@hotmail.com" },
  { name = "Lua Victória Coelho", email = "luavictoriacoelho@gmail.com" },
]
keywords = [
  "science",
  "chemistry",
  "plotting",
  "inorganic",
  "cli",
  "terminal",
  "chromatography",
  "spectroscopy",
  "spectrometry",
  "spectrophotometry",
  "mass spectrometry",
  "uv-vis",
  "fluorescence",
  "fluorescence absorption",
]
classifiers = [
  "Environment :: Console",
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter",
  "Framework :: Matplotlib",
  "Framework :: Pytest",
  "Framework :: Sphinx",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "astropy",
  "specutils",
  "scipy",
  "pybliometrics",
  "pyopenms",
  "spectrum_overload",
  "metapub",
  "pybliometrics",
  "unidecode",
  "coloredlogs",
  "astropy",
  "specutils",
  "lxml",
  "pytrends",
  "astropy",
  "distinctipy",
  "typer",
]

[project.urls]
Repository = "https://github.com/eduardotlc/materials_chempy"

[project.optional-dependencies]
dev = [
  "docutils",
  "sphinx-design",
  "ruff",
  "sphinx-autodoc-typehints",
  "sphinx-togglebutton",
  "sphinx-remove-toctrees",
  "sphinx-copybutton",
  "numpydoc",
  "nbsphinx",
  "sphinx",
  "reno",
  "flake8",
  "pytest",
  "pygments-pytest",
  "coverage",
  "qiskit_sphinx_theme",
  "sphinx-reredirects",
  "kitcat",
  "jupyterlab",
]

[project.scripts]
materials_chempy = "materials_chempy.cli:app"

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", "__pypackages__", "_build", "buck-out", "dist", "node_modules", "venv", "docs", "tmp"]
fix = true
indent-width = 4
src = ["src", "tests"]
requires-python = ">=3.11"
output-format = "full"
preview = true
unsafe-fixes = true

[tool.ruff.analyze]
detect-string-imports = true
preview = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
preview = true
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
future-annotations = true
extend-select = [
  "ARG",
  "FIX",
  "NPY",
  "PERF",
  "RUF",
  "I",
  "E",
  "COM818",
  "TD001",
  "TD002",
  "TD004",
  "TD005",
  "TD006",
  "TD007",
  "FURB",
  "N801",
  "N802",
  "N803",
  "N804",
  "N805",
  "N806",
  "N807",
  "N811",
  "N812",
  "N813",
  "N814",
  "N815",
  "N816",
  "N817",
  "N818",
  "N999",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D200",
  "D205",
  "D206",
  "D207",
  "D208",
  "D209",
  "D210",
  "D213",
  "D214",
  "D215",
  "D300",
  "D400",
  "D401",
  "D402",
  "D403",
  "D404",
  "D405",
  "D406",
  "D407",
  "D408",
  "D409",
  "D410",
  "D411",
  "D412",
  "D414",
  "D415",
  "D416",
  "D418",
  "D419",
  "PTH100",
  "PTH101",
  "PTH102",
  "PTH103",
  "PTH104",
  "PTH105",
  "PTH106",
  "PTH107",
  "PTH108",
  "PTH109",
  "PTH110",
  "PTH111",
  "PTH112",
  "PTH113",
  "PTH114",
  "PTH115",
  "PTH116",
  "PTH117",
  "PTH118",
  "PTH119",
  "PTH120",
  "PTH121",
  "PTH122",
  "PTH123",
  "PTH124",
  "PTH201",
  "PTH202",
  "PTH203",
  "PTH204",
  "PTH205",
  "PTH206",
  "PTH207",
  "PTH208",
  "PTH210",
  "PTH211",
]
preview = true
task-tags = ["TODO", "HACK", "CHECK", "FIX", "FIXME", "XXX", "DEBUG", "OPTMIZE", "OPT" ]
typing-extensions = true
fixable = ["ALL"]

[tool.ruff.lint.flake8-import-conventions.aliases]
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"
scipy = "sp"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-quotes]
avoid-escape = true
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "--color=yes",
  "--code-highlight=yes",
  "--doctest-modules",
  "--doctest-continue-on-failure",
  "--benchmark-sort=mean",
  "--benchmark-columns=mean,stddev,min,max",
]
testpaths = [
  "src/materials_chempy/test_cli.py",
  "src/materials_chempy/spectrophotometry/utils.py",
  "src/materials_chempy/logger.py",
	"src/materials_chempy/utils.py",
  "src/materials_chempy/mass_spectrometry/treat.py",
  "src/materials_chempy/var_handler.py",
  "src/materials_chempy/test_utils.py",
]
